# api/controllers/constellations.js
@@ -8,7 +8,8 @@ module.exports = {
   listConstellations: listConstellations,
   createConstellation: createConstellation,
   getConstellation: getConstellation,
-  updateConstellation: updateConstellation
+  updateConstellation: updateConstellation,
+  deleteConstellation: deleteConstellation
 };
 
 function listConstellations(req, res) {
@@ -26,4 +27,8 @@ function createConstellation(req, res) {
 function updateConstellation(req, res) {
   req.swagger.params.constellation.value.id = req.swagger.params.constellationId.value;
   T.constellations.update(req.swagger.params.constellation.value).then(data => res.json(data));
+}
+
+function deleteConstellation(req, res) {
+  T.constellations.remove(req.swagger.params.constellationId.value).then(data => res.json({message: "Success"}));
 }
