# api/controllers/dwarf_planets.js
@@ -9,7 +9,8 @@ module.exports = {
   listPlanetarySystemDwarfPlanets: listPlanetarySystemDwarfPlanets,
   createDwarfPlanet: createDwarfPlanet,
   getDwarfPlanet: getDwarfPlanet,
-  updateDwarfPlanet: updateDwarfPlanet
+  updateDwarfPlanet: updateDwarfPlanet,
+  deleteDwarfPlanet: deleteDwarfPlanet
 };
 
 function listDwarfPlanets(req, res) {
@@ -34,4 +35,8 @@ function updateDwarfPlanet(req, res) {
   req.swagger.params.dwarfPlanet.value.id = req.swagger.params.dwarfPlanetId.value;
   T.dwarf_planets.update(req.swagger.params.planetarySystemId.value, req.swagger.params.dwarfPlanet.value)
                  .then(data => res.json(data));
+}
+
+function deleteDwarfPlanet(req, res) {
+  T.dwarf_planets.remove(req.swagger.params.dwarfPlanetId.value).then(data => res.json({message: "Success"}));
 }
